<resources>
    <string name="app_name">Lab4</string>
    <string name="av_udpate">Actualización disponible</string>
    <string name="download">Descargar</string>
    <string name="day_of_birth">Domingo</string>
    <string name="update">Actualizar</string>
    <string name="drive_to">Conducir a</string>
    <string name="place_dir">12 Calle 2–51, Zona 9, Ciudad de Guatemala</string>
    <string name="place_hour">12:00 - 21:00</string>
    <string name="date_of_birth">20 de Marzo</string>
    <string name="place_name">Taquería El Loco</string>
    <string name="start">Iniciar</string>
    <string name="details">Detalles</string>
    <string name="finish">Terminar Jornada</string>
    <string name="initiate_visit">Iniciar Visita</string>
    <string name="schedule_title">Horario de atención</string>
    <string name="picture_of_the_place">Foto del lugar</string>
    <string name="additional_info">Información Adicional</string>
    <string name="call_button_text">Llamar</string>
    <string name="place_phone_number">2323-1524</string>
    <string name="place_contact_text">Teléfono</string>
    <string name="place_contact_schedule">8:00AM - 5:00PM</string>
    <string name="place_name_text">Taquería El Loco</string>
    <string name="schedule_icon_description">Schedule_Icon</string>
    <string name="call_icon_description">Call Icon</string>
</resources>