<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/L1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F6F0ED"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/history_button_margin"
            android:contentDescription="@string/update"
            android:gravity="center|start"
            android:src="@drawable/history_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:text="@string/av_udpate" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginStart="@dimen/download_margin"
            android:layout_marginEnd="@dimen/download_margin"
            android:text="@string/download"
            android:textColor="@color/dark_soft_brown"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/day_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/day_of_birth"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/L1" />

    <TextView
        android:id="@+id/date_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/date_of_birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day_of_birth" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/L2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/myrect"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_of_birth">

        <TextView
            android:id="@+id/interesting_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/place_name"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/L2"
            app:layout_constraintTop_toTopOf="@id/L2" />

        <ImageView
            android:id="@+id/drive_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/drive_to"
            android:src="@drawable/drive_icon"
            app:layout_constraintEnd_toEndOf="@id/L2"
            app:layout_constraintTop_toTopOf="@id/interesting_place" />

        <TextView
            android:id="@+id/interesting_place_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_dir"
            app:layout_constraintStart_toStartOf="@id/interesting_place"
            app:layout_constraintTop_toBottomOf="@id/interesting_place" />

        <TextView
            android:id="@+id/interesting_place_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/place_hour"
            app:layout_constraintStart_toStartOf="@id/interesting_place_dir"
            app:layout_constraintTop_toBottomOf="@id/interesting_place_dir" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            app:layout_constraintEnd_toEndOf="@id/drive_icon"
            app:layout_constraintStart_toStartOf="@id/interesting_place_hour"
            app:layout_constraintTop_toBottomOf="@id/interesting_place_hour">

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start" />

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:text="@string/details"
                style="?android:attr/buttonBarButtonStyle" />

        </TableRow>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/myrect"
        android:shadowColor="@color/white"
        android:text="@string/finish"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@id/L2"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>